[project]
name = "chat"
version = "0.5.0"
description = "RAG ChatBot"
authors = [
    { name = "Umberto Griffo", email = "umberto.griffo@gmail.com" }
]
readme = "README.md"

dynamic = ["dependencies", "requires-python"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
torch = [
    { version = "~=2.5.1", source = "pytorch", platform = "!=darwin" },
    { version = "~=2.5.1", source = "PyPI", platform = "darwin" }
]
sentence-transformers = { version = "~=5.0.0" }
sentencepiece = "~=0.2.1"
tqdm = "~=4.67.0"
requests = "~=2.32.0"
numpy = "~=1.26.4"
streamlit = "~=1.37.0"
unstructured = { version = "~=0.20.2", extras = ["md"] }
chromadb = "~=1.5.0"
transformers = "~=4.57.6"
rich = "~=13.4.2"
pyfiglet = "~=0.7"
clean-text = "~=0.7.1"
Unidecode = "~=1.3.6"
nest_asyncio = "~=1.5.8"

# nvidia dependencies
# PyTorch automatically installs all the Nvidia libraries, even on Darwin. To prevent this behavior,
# we explicitly make them optional.
#nvidia-cublas-cu12 = {version = "12.4.5.8", optional = true, platform = "!=darwin" }
#nvidia-cuda-cupti-cu12 = {version = "12.4.127", optional = true, platform = "!=darwin" }
#nvidia-cuda-nvrtc-cu12 = {version = "12.4.127", optional = true, platform = "!=darwin" }
#nvidia-cuda-runtime-cu12 = {version = "12.4.127", optional = true, platform = "!=darwin" }
#nvidia-cudnn-cu12 = {version = "9.1.0.70", optional = true, platform = "!=darwin" }
#nvidia-cufft-cu12 = {version = "11.2.1.3", optional = true, platform = "!=darwin" }
#nvidia-curand-cu12 = {version = "10.3.5.147", optional = true, platform = "!=darwin" }
#nvidia-cusolver-cu12 = {version = "11.6.1.9", optional = true, platform = "!=darwin" }
#nvidia-cusparse-cu12 = {version = "12.3.1.170", optional = true, platform = "!=darwin" }
#nvidia-nccl-cu12 = {version = "2.21.5", optional = true, platform = "!=darwin" }
#nvidia-nvjitlink-cu12 = {version = "12.4.127", optional = true, platform = "!=darwin" }
#nvidia-nvtx-cu12 = {version = "12.4.127", optional = true, platform = "!=darwin" }

#[tool.poetry.extras]
#cuda-acceleration = [
#    "nvidia-cublas-cu12", "nvidia-cuda-cupti-cu12", "nvidia-cuda-nvrtc-cu12",
#    "nvidia-cuda-runtime-cu12", "nvidia-cudnn-cu12", "nvidia-cufft-cu12",
#    "nvidia-curand-cu12", "nvidia-cusolver-cu12", "nvidia-cusparse-cu12",
#    "nvidia-nccl-cu12", "nvidia-nvjitlink-cu12", "nvidia-nvtx-cu12"
#]

[tool.poetry.group.dev.dependencies]
pytest = "~=7.2.1"
pytest-cov = "~=4.0.0"
pytest-mock = "~=3.10.0"
pytest-asyncio = "~=0.23.6"
pre-commit = "~=3.6.0"
ruff = "~=0.6.4"
httpx = "~=0.28.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://docs.astral.sh/ruff/configuration/
# https://docs.astral.sh/ruff/settings/#lint_isort_known-first-party
[tool.ruff]
exclude = [
    ".venv",
    ".ruff_cache",
    ".pytest_cache",
    "docs"
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# "I" is isort, C901 is McCabe complexity
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    "C901"
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 12.
max-complexity = 12

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = [
    "chatbot",
    "tests"
]
